# landlord-tracker

./: .env-sample  .gitignore  README.md  docker-compose.yml
aleph_lt/: README.md  landlord_tracker_mappings.yml  load_mappings.sh
database/: .gitignore
database/engels/preprocess/: pre_corporations.py
engels/: load.py
engels/export/: aleph.py
frontend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
frontend/app/: __init__.py  config.py  models.py  utils.py
frontend/app/main/: __init__.py  forms.py  views.py
frontend/app/templates/: base.html  index.html  report.html
